parche_registro_responsable_